--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,10 @@
         <item>其他</item>
     </string-array>
 
+    <string name="last_week">一周内</string>
+    <string name="last_month">一个月内</string>
+    <string name="last_year">一年内</string>
+    <string name="custom_date">自选日期</string>
     <string name="ok">确定</string>
     <string name="cancel">取消</string>
     <string name="format_year_month_day">%1$s年%2$s月%3$s日</string>
